# agentic_RAG_with_pydantic

./: .env  .env.example  .gitignore  README.md  crawl_website_ai_docs.py  hello.py  main.py  pydantic_ai_expert.py  pyproject.toml  streamlit_app.py  test_db.py  utils.py
